--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     implementation 'com.google.code.gson:gson:2.8.2'
     compile 'me.imid.swipebacklayout.lib:library:1.1.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'com.android.support:cardview-v7:26.+'
     implementation 'me.wcy:lrcview:2.0.1'
