--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
-        android:name="com.vaiyee.hongmusic.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,7 +17,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/MyAPPtheme">
+            android:theme="@style/MyAPPtheme"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +26,34 @@
             </intent-filter>
         </activity>
         <activity android:name=".OnlineMusicActivity" />
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".SearchActivity" />
+
+        <service
+            android:name=".service.MyService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+        <receiver android:name=".brocastReciver.Myreceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.vaiyee.showplayfragment"/>
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".brocastReciver.AsynButton"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.vaiyee.asynbutton"></action>
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".brocastReciver.playModeReceiver"
+            android:directBootAware="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.vaiyee.playmode"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
