--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'me.yatoooon:screenadaptation:1.0.9'//屏幕适配工具
+    implementation 'me.yatoooon:screenadaptation:1.0.9'
+    //屏幕适配工具
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:26.+'
@@ -44,10 +45,13 @@ dependencies {
     compile 'com.jude:rollviewpager:1.4.6'
     compile 'net.opacapp:multiline-collapsingtoolbar:1.6.0'
     compile 'com.android.support:design:26.+'
+    compile 'com.makeramen:roundedimageview:2.3.0'
+    //圆角ImageView依赖库
     compile project(':vitamio')
+    //第三方视频播放库
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation files('libs/JID3.jar')
+    implementation files('libs/JID3.jar')//编辑mp3文件的库
 }
